--- a/firstapp/Gemfile
+++ b/firstapp/Gemfile
@@ -38,3 +38,6 @@ gem 'spring',        group: :development
 # Use debugger
 # gem 'debugger', group: [:development, :test]
 
+# ruby version
+ruby "2.1.2"
+
