--- a/firstapp/Gemfile
+++ b/firstapp/Gemfile
@@ -3,8 +3,14 @@ source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.1.1'
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+# Use Postgres as the database for Active Record
+group :development do
+  gem 'sqlite3'
+end
+group :production do
+  gem 'pg'
+end
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.3'
 # Use Uglifier as compressor for JavaScript assets
@@ -42,5 +48,5 @@ gem 'spring',        group: :development
 ruby "2.1.2"
 
 # Heroku
-gem 'rails_12factor', group: :production
+#gem 'rails_12factor', group: :production
 
